@@ -1,14 +1,16 @@
 package nez.lang;
 
+import java.util.List;
+
 import nez.lang.Nez.Byte;
-import nez.lang.expr.Pempty;
-import nez.lang.expr.Pfail;
+import nez.lang.Nez.LeftFold;
+import nez.lang.expr.Expressions;
+import nez.util.UList;
 
-public class GrammarRewriter extends GrammarTransducer {
+public class ExpressionTransformer extends Expression.Visitor {
 
-	@Override
-	public Production visitProduction(Production p) {
-		return p;
+	protected Expression visit(Expression e, Object a) {
+		return (Expression) e.visit(this, null);
 	}
 
 	@Override
@@ -48,67 +50,86 @@ public class GrammarRewriter extends GrammarTransducer {
 
 	@Override
 	public Expression visitPair(Nez.Pair e, Object a) {
-		Expression first = e.getFirst();
-		push(first);
-		first = (Expression) first.visit(this, a);
-		Expression next = e.getNext();
-		push(next);
-		next = (Expression) next.visit(this, a);
-		pop(e.getNext());
-		pop(e.getFirst());
-		if (first instanceof Pempty) {
-			return next;
+		e.set(0, visit(e.get(0), a));
+		e.set(1, visit(e.get(1), a));
+		return e;
+	}
+
+	@Override
+	public Expression visitSequence(Nez.Sequence e, Object a) {
+		boolean reduced = false;
+		int i = 0;
+		for (i = 0; i < e.size(); i++) {
+			Expression sub = visit(e.get(i), a);
+			e.set(i, sub);
+			if (sub instanceof Nez.Empty || sub instanceof Nez.Fail || sub instanceof Nez.Sequence || sub instanceof Nez.Pair) {
+				reduced = true;
+			}
 		}
-		if (first instanceof Pfail || next instanceof Pempty) {
-			return first;
+		if (reduced == true) {
+			List<Expression> l = Expressions.newList2(e.size());
+			for (Expression sub : e) {
+				Expressions.addSequence(l, sub);
+			}
+			return Expressions.newSequence(e.getSourceLocation(), l);
 		}
-		e.first = first;
-		e.next = next;
 		return e;
 	}
 
 	@Override
 	public Expression visitChoice(Nez.Choice e, Object a) {
+		boolean reduced = false;
 		int i = 0;
 		for (i = 0; i < e.size(); i++) {
-			e.set(i, visitInner(e.get(i)));
+			Expression sub = visit(e.get(i), a);
+			e.set(i, sub);
+			if (sub instanceof Nez.Empty || sub instanceof Nez.Fail || sub instanceof Nez.Choice) {
+				reduced = true;
+			}
+		}
+		if (reduced == true) {
+			UList<Expression> l = Expressions.newList(e.size());
+			for (Expression sub : e) {
+				Expressions.addChoice(l, sub);
+			}
+			return Expressions.newPchoice(e.getSourceLocation(), l);
 		}
 		return e;
 	}
 
 	@Override
 	public Expression visitOption(Nez.Option e, Object a) {
-		e.set(0, this.visitInner(e.get(0)));
+		e.set(0, this.visit(e.get(0), a));
 		return e;
 	}
 
 	@Override
 	public Expression visitZeroMore(Nez.ZeroMore e, Object a) {
-		e.set(0, this.visitInner(e.get(0)));
+		e.set(0, this.visit(e.get(0), a));
 		return e;
 	}
 
 	@Override
 	public Expression visitOneMore(Nez.OneMore e, Object a) {
-		e.set(0, this.visitInner(e.get(0)));
+		e.set(0, this.visit(e.get(0), a));
 		return e;
 	}
 
 	@Override
 	public Expression visitAnd(Nez.And e, Object a) {
-		e.set(0, this.visitInner(e.get(0)));
+		e.set(0, this.visit(e.get(0), a));
 		return e;
 	}
 
 	@Override
 	public Expression visitNot(Nez.Not e, Object a) {
-		e.set(0, this.visitInner(e.get(0)));
+		e.set(0, this.visit(e.get(0), a));
 		return e;
 	}
 
 	@Override
 	public Expression visitDetree(Nez.Detree e, Object a) {
-		e.set(0, this.visitInner(e.get(0)));
+		e.set(0, this.visit(e.get(0), a));
 		return e;
 	}
 
@@ -118,8 +139,14 @@ public class GrammarRewriter extends GrammarTransducer {
 	}
 
 	@Override
+	public Object visitLeftFold(LeftFold e, Object a) {
+		e.set(0, this.visit(e.get(0), a));
+		return e;
+	}
+
+	@Override
 	public Expression visitLink(Nez.Link e, Object a) {
-		e.set(0, this.visitInner(e.get(0)));
+		e.set(0, this.visit(e.get(0), a));
 		return e;
 	}
 
@@ -140,19 +167,19 @@ public class GrammarRewriter extends GrammarTransducer {
 
 	@Override
 	public Expression visitBlockScope(Nez.BlockScope e, Object a) {
-		e.set(0, this.visitInner(e.get(0)));
+		e.set(0, this.visit(e.get(0), a));
 		return e;
 	}
 
 	@Override
 	public Expression visitLocalScope(Nez.LocalScope e, Object a) {
-		e.set(0, this.visitInner(e.get(0)));
+		e.set(0, this.visit(e.get(0), a));
 		return e;
 	}
 
 	@Override
 	public Expression visitSymbolAction(Nez.SymbolAction e, Object a) {
-		e.set(0, this.visitInner(e.get(0)));
+		e.set(0, this.visit(e.get(0), a));
 		return e;
 	}
 
@@ -163,7 +190,7 @@ public class GrammarRewriter extends GrammarTransducer {
 
 	@Override
 	public Expression visitSymbolPredicate(Nez.SymbolPredicate e, Object a) {
-		e.set(0, this.visitInner(e.get(0)));
+		e.set(0, this.visit(e.get(0), a));
 		return e;
 	}
 
@@ -179,7 +206,7 @@ public class GrammarRewriter extends GrammarTransducer {
 
 	@Override
 	public Expression visitOn(Nez.On e, Object a) {
-		e.set(0, this.visitInner(e.get(0)));
+		e.set(0, this.visit(e.get(0), a));
 		return e;
 	}
 
